INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/antlr $(all_includes)
METASOURCES = AUTO

noinst_LTLIBRARIES = libantlr3c.la

libantlr3c_la_SOURCES = \
antlr3baserecognizer.c   antlr3bitset.c       antlr3commontreeadaptor.c     antlr3cyclicdfa.c  antlr3filestream.c   antlr3lexer.c           antlr3string.c        antlr3treeparser.c \
antlr3basetreeadaptor.c  antlr3collections.c  antlr3commontree.c            antlr3encodings.c  antlr3inputstream.c  antlr3parser.c          antlr3stringstream.c  antlr3ucs2inputstream.c \
antlr3basetree.c         antlr3commontoken.c  antlr3commontreenodestream.c  antlr3exception.c  antlr3intstream.c    antlr3rewritestreams.c  antlr3tokenstream.c

